# mpface

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/mpface/: __init__.py  base_predictor.py  detector.py  face.py  utils.py
src/mpface/assets/: README.md  __init__.py  long.onnx  short.onnx
src/mpface/assets/long.mlpackage/: Manifest.json
src/mpface/assets/long.mlpackage/Data/com.apple.CoreML/: model.mlmodel
src/mpface/assets/short.mlpackage/: Manifest.json
src/mpface/assets/short.mlpackage/Data/com.apple.CoreML/: model.mlmodel
tests/: __init__.py  test_detector.py  test_utils.py
